<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="vbnb_firsts_str">首页</string>
    <string name="vbnb_private_str">尊享私行</string>
    <string name="vbnb_happy_live_str">乐享生活</string>
    <string name="vbnb_ever_ok_str">永享健康</string>
    <string name="vbnb_mine_str">我的</string>
    <string name="vbnb_club_str">商城</string>
    <string name="vbnb_college_str">学院</string>
    <string name="vbnb_msg_str">消息</string>
    <string name="vbnb_tougu_dangan">投资顾问档案</string>
    <string name="wel_cancelbtn_str">跳过</string>
    <string name="aci_choice_ids_str">选择您的身份</string>
    <string name="aci_right_inverstor_str">我是合格投资人</string>
    <string name="aci_right_adviser_str">我是投资顾问</string>
    <string name="aci_next_str">下一步</string>
    <string name="web_address">www.caifuyun.cn</string>
    <string name="company_name">北京盈泰财富云电子商务有限公司</string>
    <string name="cia_choice_ids_str">请选择您的身份</string>
    <string name="aa_restart_now_str">立即启动</string>
    <string name="aa_login_str">登录</string>
    <string name="aa_register_str">注册</string>
    <string name="al_username_str">请输入账号</string>
    <string name="al_password_str">请输入密码</string>
    <string name="al_login_str">登录</string>
    <string name="al_register_str">注册新用户</string>
    <string name="al_forget_str">忘记密码?</string>
    <string name="al_wx_login_str">选择用其他方式登录</string>
    <string name="un_null_str">请输入您的账号</string>
    <string name="pw_null_str">请输入您的密码</string>
    <string name="la_login_loading_str">登录中……</string>
    <string name="la_getinfo_error_str">获取用户信息失败</string>
    <string name="la_login_succ_str">登录成功</string>
    <string name="la_no_install_wx_str">未安装微信</string>
    <string name="author_error_str">授权失败</string>
    <string name="author_cancel_str">授权取消</string>
    <string name="la_wxlogin_str">微信登录</string>
    <string name="la_cd_content_str">您将使用微信号%1$s创建私享云账号</string>
    <string name="enter_str">确认</string>
    <string name="ra_register_loading_str">注册中……</string>
    <string name="ra_send_code_str">您将会接收到来自%1$s的电话，验证码将会以语音的方式播放，如有疑问，拨打客服电话：400-188-8848。 </string>
    <string name="btn_cancel_str">取消</string>
    <string name="ra_enter_code_str">确认接收</string>
    <string name="code_null_str">请输入您的验证码</string>
    <string name="pwd_noright_str">请输入6-16位密码</string>
    <string name="proto_notread_str">请阅读私享云使用协议并确认</string>
    <string name="ra_register_success_str">注册成功</string>
    <string name="ra_register_fail_str">注册失败</string>
    <string name="sending_str">发送中……</string>
    <string name="sending_succ_str">发送成功</string>
    <string name="sending_fail_str">发送失败</string>
    <string name="ra_code_resend_str">重新发送</string>
    <string name="checking_str">验证中……</string>
    <string name="checking_fail_str">验证失败</string>
    <string name="reseting_str">重置中……</string>
    <string name="as_nosame_str">请输入相同的密码</string>
    <string name="enter_phone_hint_str">请输入手机号</string>
    <string name="enter_code_hint_str">请输入验证码</string>
    <string name="send_code_str">发送验证码</string>
    <string name="ab_jump_next_str"><![CDATA[跳过>]]></string>
    <string name="al_need_bind_phone_str">您需要绑定手机号</string>
    <string name="account_merge_str3">您的手机号%1$s在此之前已经注册过私享云App的帐号，为保障您的信息安全和提供一致的在线服务，私享云需要您将手机帐号与微信帐号进行合并操作，届时您将可以通过微信号或手机号登录使用App。选择“我要合并”，客服人员将会在48小时内与您电话确认合并需求并告知您合并之后的相关使用事项，在此期间您可以正常使用App（不会受影响）。如果您不需要合并帐号，请选择“继续使用”。如有疑问，请拨打400-188-8848咨询</string>
    <string name="bpna_marge_str">账号合并</string>
    <string name="bpna_marge_no_str">继续使用</string>
    <string name="bpna_marge_yes_str">我要合并</string>
    <string name="bpna_start_marge_str">开始合并账号</string>
    <string name="bind_phone_str">绑定中……</string>
    <string name="bing_phone_succ_str">绑定成功</string>
    <string name="bing_phone_fail_str">绑定失败</string>
    <string name="bind_phone_not_repeat_str">您的手机号正在绑定中，不用重复绑定</string>
    <string name="app_name_customer">私享云</string>
    <string name="shouchishenfenzheng">请上传本人手持证件照片</string>
    <string name="paizhaoshifan">拍照示范:</string>
    <string name="biaozhun">标准</string>
    <string name="biankuangqueshi">边框缺失</string>
    <string name="zhaopianmohu">照片模糊</string>
    <string name="shanguangqianglie">闪光强烈</string>
    <string name="check_failure_reason_text">审核未通过的原因：</string>
    <string name="guanlian_asset_description">1. 您之前通过投资顾问认购的产品即为历史订单，可通过上传证件进行关联查看。\n2. 您上传的证件必须与您投资所用证件一致。\n3. 上传的本人手持证件照片需确保人物面部、手持证件内容清晰完整可读。\n4. 我们承诺绝不对外泄露您的信息。\n5. 如有疑问可拨打客服电话 400-188-8848。</string>
    <string name="asset_prove_description">1. 根据《私募投资基金募集行为管理办法》的要求，只有合格投资者才能购买私募产品。\n2. 个人投资者需提供最近三年年均收入不应低于50万元的收入证明或资产总额不低于300万元金融资产证明。\n3. 机构投资者需提供资产负债表和真实性承诺函或会计师事务所出具的审计报告原件。\n4. 我们将会确保您提交材料的隐私安全，如有疑问请直接拨打客服电话400-188-8848。</string>
    <string name="loading">加载中...</string>
    <string name="no_camera_device">没有找到相机设备, 请检查是否有相应拍照权限</string>
    <string name="asset_prove_upload_desc">支持10张以内JPG格式图片，单张图片不超过10M</string>
    <string name="risk_result_info">根据问卷答案分析，您的风险承受能力为</string>
    <string name="risk_evaluating_title">风险测评结果</string>
    <string name="risk_title">风险承受能力测评</string>
    <string name="setup_gesture_pattern">请输入手势密码</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="set_gesture_password_success">手势密码设置成功</string>
    <string name="modify_gesture_password_success">手势密码修改成功</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="please_right_gesture_password"><font color='#c70c1e'>至少连接四个点，请重新绘制</font></string>
    <string name="set_gesture_agin"><font color='#c70c1e'>与首次绘制不一致，请重新绘制</font></string>
    <string name="set_gesture_pattern_reason">为了您的账户安全，请设置手势密码</string>
    <string name="reset_gesture_code">请再次设置手势密码</string>
    <string name="please_target_gesture_password">请输入原手势密码</string>
    <string name="please_new_gesture_password">请设置新的手势密码</string>
    <string name="please_target_gesture_password_again">请再次绘制手势密码</string>
    <string name="setup_gesture_code">验证手势密码</string>
    <string name="gesture_password_error_times">您已连续五次输错手势，手势密码已关闭!</string>
    <string name="weixin_reset_gesture_password">忘记手势密码，请致电官方客户电话</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="mainhome">首页</string>
    <string name="privatebanck_str">尊享私行</string>
    <string name="enjoylife_str">乐享生活</string>
    <string name="jiankang_str">永享健康</string>
    <string name="privatebank_title_str">搜索产品名称,投资标的,基金管理人</string>
    <string name="zunixanghuiyuan">私享云尊享会员</string>
    <string name="setting_item_public_fund">公募基金交易账户</string>
    <string name="setting_item_change_pwd">修改登录密码</string>
    <string name="setting_item_gesture_pwd">手势密码</string>
    <string name="setting_item_change_gesture_pwd">修改手势密码</string>
    <string name="setting_item_common_question">常见问题</string>
    <string name="setting_item_feedback">意见反馈</string>
    <string name="setting_item_recommend">推荐好友</string>
    <string name="setting_item_about_app">关于本应用</string>
    <string name="elegantliving_str">生活家</string>
    <string name="elegantgoods_str">尚品</string>
    <string name="feedback_hint">请写下您的建议或意见,对于有价值的反馈我们将会给予云豆奖励!(至少5个字)</string>
    <string name="personal_information_title">我的信息</string>
    <string name="personal_information_title_changename">姓名</string>
    <string name="personal_information_title_changegender">性别</string>
    <string name="camera_cancel">取消</string>
    <string name="salons_activities">总裁讲堂</string>
    <string name="oldsalons_activities">过往活动</string>
    <string name="datum_manage_title">资料管理</string>
    <string name="datum_manage_account">投资账号</string>
    <string name="datum_manage_risk">风险偏好</string>
    <string name="datum_manage_asset_report">资产报告</string>
    <string name="datum_manage_asset_certify">资产证明</string>
    <string name="datum_manage_relative_asset">关联我的资产</string>
    <string name="datum_manage_risk_type_pingheng">平衡性</string>
    <string name="datum_manage_relative_statues">未关联</string>
    <string name="setting_title">设置</string>
    <string name="public_fund_account_info">公募基金账号信息</string>
    <string name="real_name">真实姓名</string>
    <string name="centify_type">证件类型</string>
    <string name="certify_number">证件号码</string>
    <string name="invisite_account_prompt">温馨提示：请填写您的真实信息，以便私行家为您提供更精准的服务</string>
    <string name="invisit_account_input_prompt">请输入%s</string>
    <string name="invisit_account_input_right_prompt">请输入正确的%s</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_signin">每日奖励</string>
    <string name="mine_card_coupons">我的卡券</string>
    <string name="mine_best_card">我的贺卡</string>
    <string name="mine_assert_report">资产报告</string>
    <string name="mine_investor_carlendar">投资日历</string>
    <string name="mine_members">会员专区</string>
    <string name="mine_health_list">健康咨询</string>
    <string name="mine_health_order">健康订单</string>
    <string name="mine_travel_order">旅游订单</string>
    <string name="mine_travel_order_detail">订单详情</string>
    <string name="mine_travel">旅游权益</string>
    <string name="select_bind_advise">私人银行家</string>
    <string name="account_info_caifu_value">我的财富值</string>
    <string name="account_info_mine_yundou">我的云豆</string>
    <string name="account_info_mine_private_banker">我的私人银行家</string>
    <string name="account_info_every_qiandao">每日奖励</string>
    <string name="account_info_mine_activity">我的沙龙</string>
    <string name="account_info_mine_card_quan">我的卡券</string>
    <string name="account_info_mine_wish_card">我的贺卡</string>
    <string name="account_info_user_level">会员等级</string>
    <string name="account_bank_asset_zuhe">资产组合</string>
    <string name="account_bank_hide_assert">隐藏资产</string>
    <string name="account_bank_show_assert">显示资产</string>
    <string name="account_bank_invistor_carlendar">投资日历</string>
    <string name="account_bank_info_manager">资料管理</string>
    <string name="account_bank_no_bugy">您没有在存资产，可以</string>
    <string name="account_bank_browse_buy">看看“锦绣山河”系列产品</string>
    <string name="account_bank_upload_certify">上传证件关联已有资产</string>
    <string name="account_bank_no_relative_assert">我是老客户，我要查看已有资产</string>
    <string name="account_bank_no_relative_assert_with_status">关联历史订单（%s）</string>
    <string name="account_bank_no_relative_assert_with_status_new">关联资产（%s）</string>
    <string name="account_order_wait_send">待发货</string>
    <string name="account_order_wait_receive">待收货</string>
    <string name="account_order_finished">已完成</string>
    <string name="account_order_after_sale">售后服务</string>
    <string name="account_order_all">全部</string>
    <string name="account_order_now_call">立即拨打</string>
    <string name="account_order_server_dialog_prompt">您收到商品后有任何问题都可拨打400-188-8848享受售后服务</string>
    <string name="account_health_no_bugy">您还未使用过健康服务，您可以：</string>
    <string name="account_health_go_server">看健康项目</string>
    <string name="account_health_zixun_server_title">【咨询服务】</string>
    <string name="custom_server_telephone_number">400-188-8848</string>
    <string name="account_travel_no_bugy">您还未使用过旅游权益，您可以：</string>
    <string name="account_travel_go_server">看旅游权益</string>
    <string name="phone">电话</string>
    <string name="mms">短信</string>
    <string name="conversation">对话</string>
    <string name="mine_activity_time">活动时间</string>
    <string name="mine_activity_address">活动地点</string>
    <string name="mine_main_jiabing">主讲嘉宾</string>
    <string name="mine_private_bank">我的私人银行家</string>
    <string name="private_bank_jia">私人银行家</string>
    <string name="mine_video_detail">视频详情</string>
    <string name="mine_zhuanti_detail">健康专题</string>
    <string name="home_visiter_up_txt">私享云-连接人与财富</string>
    <string name="home_visiter_down_txt">请点击选择您的专属私人银行家</string>
    <string name="account_video_go_server">去看视频</string>
    <string name="account_video_go_look_all">查看全部</string>
    <string name="account_bank_cunxun_assert">资产(%s)</string>
</resources>