<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:paddingTop="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="10dp">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text"
                    android:text="@string/account_info_caifu_value"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_value"
                    android:id="@+id/mine_caifu_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text"
                    android:text="@string/account_info_mine_yundou"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_value"
                    android:id="@+id/mine_yundou_id"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text"
                    android:text="@string/account_info_mine_private_banker"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_value"
                    android:id="@+id/mine_private_banker_id"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                style="@style/mine_account_info_text_image_ll">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text_image"
                    android:drawableTop="@drawable/icon_check"
                    android:text="@string/account_info_every_qiandao"/>
            </LinearLayout>
            
            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                style="@style/mine_account_info_text_image_ll">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text_image"
                    android:drawableTop="@drawable/icon_events"
                    android:text="@string/account_info_mine_activity"/>
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                style="@style/mine_account_info_text_image_ll">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text_image"
                    android:drawableTop="@drawable/icon_ticket"
                    android:text="@string/account_info_mine_card_quan"/>
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                style="@style/mine_account_info_text_image_ll">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/mine_account_info_text_image"
                    android:drawableTop="@drawable/icon_cards"
                    android:text="@string/account_info_mine_wish_card"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.cgbsoft.lib.widget.RoundImageView
        android:layout_width="@dimen/ui_80_dip"
        android:layout_height="@dimen/ui_80_dip"
        android:id="@+id/account_info_image_id"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/logoshare"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/account_info_image_id"
        android:layout_marginTop="10dp"
        android:text="王老师"
        android:id="@+id/account_info_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/account_info_image_id"
        android:layout_below="@id/account_info_name"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_member_bg"
            android:textSize="@dimen/dimens_sp_12"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/account_info_user_level"
            android:id="@+id/user_level_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_grade_bg"
            android:textSize="@dimen/dimens_sp_12"
            android:gravity="center"
            android:text="12泰卡会员"
            android:textColor="@color/white"
            android:id="@+id/user_level_value"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimens_sp_12"
        android:gravity="center"
        android:text="距会员升级还差7倍财富值"
        android:textColor="@color/color_333333"
        android:layout_marginTop="10dp"/>

</RelativeLayout>